# didactic-waffle

./: .gitignore  README.md
apala_ws/: error_kf_h1.txt  error_ukf.txt  eventually_human1.txt  goal_time.txt  implies_human1.txt  org1.txt  org2.txt  org_h1.txt  org_ukf2.txt  pred_kf_h1.txt  pred_ukf2.txt  ttc.txt  until_human1.txt  vel.txt
apala_ws/devel/: .catkin  .rosinstall  setup.sh
apala_ws/devel/lib/pkgconfig/: tb_apala.pc  turtlebot3_bringup.pc  turtlebot3_description.pc  turtlebot3_example.pc  turtlebot3_fake.pc  turtlebot3_gazebo.pc  turtlebot3_msgs.pc  turtlebot3_navigation.pc  turtlebot3_slam.pc  turtlebot3_teleop.pc
apala_ws/devel/lib/tb_apala/: test2.py  test5.py  test6.py
apala_ws/devel/lib/turtlebot3_bringup/: turtlebot3_diagnostics
apala_ws/devel/lib/turtlebot3_example/: turtlebot3_client  turtlebot3_cliff  turtlebot3_pointop_key  turtlebot3_server  turtlebot3_sonar
apala_ws/devel/lib/turtlebot3_fake/: turtlebot3_fake_node
apala_ws/devel/lib/turtlebot3_gazebo/: turtlebot3_drive
apala_ws/devel/lib/turtlebot3_slam/: flat_world_imu_node
apala_ws/devel/share/tb_apala/cmake/: tb_apalaConfig.cmake
apala_ws/devel/share/turtlebot3_bringup/cmake/: turtlebot3_bringupConfig.cmake
apala_ws/devel/share/turtlebot3_description/cmake/: turtlebot3_descriptionConfig.cmake
apala_ws/devel/share/turtlebot3_example/cmake/: turtlebot3_example-msg-paths.cmake  turtlebot3_exampleConfig.cmake
apala_ws/devel/share/turtlebot3_fake/cmake/: turtlebot3_fakeConfig.cmake
apala_ws/devel/share/turtlebot3_gazebo/cmake/: turtlebot3_gazeboConfig.cmake
apala_ws/devel/share/turtlebot3_msgs/cmake/: turtlebot3_msgs-msg-extras.cmake  turtlebot3_msgs-msg-paths.cmake  turtlebot3_msgsConfig.cmake
apala_ws/devel/share/turtlebot3_navigation/cmake/: turtlebot3_navigationConfig.cmake
apala_ws/devel/share/turtlebot3_slam/cmake/: turtlebot3_slamConfig.cmake
apala_ws/devel/share/turtlebot3_teleop/cmake/: turtlebot3_teleopConfig.cmake
apala_ws/loc1_h1_b/: always_human1.txt  error_kf.txt  goal_time.txt  implies_human1.txt  org2.txt  pred_kf2.txt  until_human1.txt
apala_ws/loc1_h2/: always_human1.txt  error_kf.txt  eventually_human1.txt  goal_time.txt  org2.txt  pred_kf2.txt  until_human1.txt
apala_ws/src/robot/scripts/: test.py  test2.py  test3.py
apala_ws/src/tb_apala/: CMakeLists.txt  package.xml  setup.py
apala_ws/src/tb_apala/launch/: base.launch  plot.launch  tb.launch
apala_ws/src/tb_apala/msg/: BoundingBoxes.msg  move.msg  pcl_pred.msg  yolodepth.msg
apala_ws/src/tb_apala/scripts/: eval_pred.py  pred.py  prediction.py  test2.py  test3.py  test6.py  yolo_depth.py
apala_ws/src/tb_apala/src/: PintView_GCN.py  error_ekf.txt  error_enkf.txt  error_kf.txt  error_ukf.txt  eval.py  eval_pred.py  kf_predictors.py  marker.py  marker_publisher.py  monitor.py  move.py  move_base.py  move_loc2.py  nav.py  org1.txt  org2.txt  org_ekf2.txt  org_enkf.txt  organize.cpp  pointnet2_cls_msg.py  pointnet2_ros.py  pointnet2_utils.py  pred_ekf2.txt  pred_enkf.txt  pred_enkf2.txt  pred_error.py  pred_error2.py  pred_error4.py  pred_kf.txt  pred_kf2.txt  pred_old.py  pred_ukf2.txt  prediction.py  ptn2.py  test_goal3.py  test_ptn22.py  yolo_depth.py
apala_ws/src/tb_apala/src/pred files/: error_ukf.txt  (+7 more)
apala_ws/tb_gz/: scene1.launch  scene2.launch  scene3.launch  scene4.launch
teb_ws/: data.csv  frames.gv  setup.py
teb_ws/multi_rob/: multi_gz.launch  multi_nav.launch  tb1_nav.launch  tb2_nav.launch  tb3_nav.launch
teb_ws/src/monitoring/: CMakeLists.txt  package.xml  setup.py
teb_ws/src/monitoring/launch/: nav.launch  plot.launch  tb.launch
teb_ws/src/monitoring/msg/: H_detection.msg  Meannn.msg  P_detection.msg  position.msg  stop.msg  yolodepth.msg
teb_ws/src/monitoring/src/: move.py  multi_yolo_depth.py  pointnet2_ros.py  prediction.py  robot_state.py  yolo_depth.py
teb_ws/src/monitoring/src/point_cloud/: Model.py  pointnet2_utils.py
teb_ws/src/monitoring/src/point_cloud/test files/: org_old.cpp  test_gcn.py  test_ptn2.py
teb_ws/src/tb_apala/: CMakeLists.txt  package.xml  setup.py
teb_ws/src/tb_apala/launch/: tb.launch
teb_ws/src/tb_apala/msg/: Boundingbox.msg  MinMax.msg
teb_ws/src/tb_apala/src/: change_direction.py  change_goal.py  costmap_plugins.xml  monitor.py  my_pointnet_gcn.py  nav.py  person_0089_001.xyz  prediction.py  robot_state.py  simple_layer.cpp  test_goal.py  test_goal2.py  test_ptn222.py
teb_ws/src/verification/: CMakeLists.txt  package.xml  setup.py
teb_ws/src/verification/launch/: all.launch  cloud_processing.launch  clustering.launch  collision.launch  mulit_processing.launch  multi_processing.launch  scenario.launch  yolo.launch
teb_ws/src/verification/msg/: Deviation.msg
teb_ws/src/verification/src/: case0.py  case1.py  case1_test.py  case2.py  case2_test.py  case3.py  case3_test.py  case3_test2.py  case3_test3.py  case3b.py  case4.py  case4_test.py  clustering_tb3_0.py  clustering_tb3_1.py  clustering_tb3_2.py  collision.py  collision_tb3_0.py  collision_tb3_1.py  collision_tb3_2.py  goal.py  goal_tb3_0.py  goal_tb3_1.py  goal_tb3_2.py  human_reachability.py  human_star_set.py  human_state.py  kalmanFilter.py  kf.py  kf_apala.py  kf_apala2.py  kf_predictors.py  kf_probstar.py  kf_probstar.py.py  marker_pub.py  marker_publisher.py  monitor.py  multi_process_pcl_tb3_0.cpp  multi_process_pcl_tb3_1.cpp  multi_process_pcl_tb3_2.cpp  multi_yolo_depth.py  (+25 more)
(+356 files in other folders)
